--- a/index.html
+++ b/index.html
@@ -40,15 +40,9 @@
           <img src="profile.jpg" alt="Sai Krishna" class="hero-img" />
           <div class="hero-text">
             <h2>
-  <span>Hey</span> 
-  <span>there!</span> 
-  <span>I</span> 
-  <span>am</span> 
-  <span>Sai</span> 
-  <span>Krishna</span>
-  <span>Reddy</span>
-  <span>Vuppala</span>
-</h2>
+              <span>Hey</span> <span>there!</span> <span>I</span> <span>am</span>
+              <span>Sai</span> <span>Krishna</span>
+            </h2>
           </div>
         </div>
       </div>
@@ -60,10 +54,16 @@
         <h2>About Me</h2>
         <div class="about-content">
           <p>
-            Hello! I'm Sai Krishna, a Full Stack Developer with over 3 years of
-            experience in designing and optimizing scalable web applications.
-            Proficient in modern frameworks like Spring Boot, Angular, and React.
-            Passionate about delivering high-quality solutions.
+            Hello! I'm Sai Krishna, a passionate Full Stack Developer with over 3 years of experience in
+            developing scalable, high-performance web applications. I specialize in backend development with 
+            <strong>Java, Spring Boot</strong> and have hands-on expertise in frontend frameworks like 
+            <strong>React.js and Angular</strong>. 
+          </p>
+          <p>
+            My expertise extends to working with <strong>RESTful APIs, Microservices, SQL, NoSQL databases, and AWS</strong>. 
+            I'm also skilled in container orchestration using <strong>Kubernetes</strong> and have contributed to CI/CD pipelines 
+            for automated deployment. With a strong foundation in software design patterns and best practices, 
+            I love solving complex problems and optimizing performance for enterprise-grade applications.
           </p>
         </div>
       </div>
@@ -74,30 +74,16 @@
       <div class="container">
         <h2>Skills</h2>
         <div class="skills-container">
-          <div class="skill">
-            <i class="fab fa-java"></i>
-            <span>Java</span>
-          </div>
-          <div class="skill">
-            <i class="fas fa-leaf"></i>
-            <span>Spring Boot</span>
-          </div>
-          <div class="skill">
-            <i class="fab fa-react"></i>
-            <span>React.js</span>
-          </div>
-          <div class="skill">
-            <i class="fab fa-node-js"></i>
-            <span>Node.js</span>
-          </div>
-          <div class="skill">
-            <i class="fas fa-database"></i>
-            <span>MySQL</span>
-          </div>
-          <div class="skill">
-            <i class="fas fa-database"></i>
-            <span>MongoDB</span>
-          </div>
+          <div class="skill"><i class="fab fa-java"></i> <span>Java</span></div>
+          <div class="skill"><i class="fas fa-leaf"></i> <span>Spring Boot</span></div>
+          <div class="skill"><i class="fab fa-react"></i> <span>React.js</span></div>
+          <div class="skill"><i class="fab fa-angular"></i> <span>Angular</span></div>
+          <div class="skill"><i class="fab fa-node-js"></i> <span>Node.js</span></div>
+          <div class="skill"><i class="fas fa-database"></i> <span>MySQL</span></div>
+          <div class="skill"><i class="fas fa-database"></i> <span>SQL</span></div>
+          <div class="skill"><i class="fas fa-network-wired"></i> <span>RESTful APIs</span></div>
+          <div class="skill"><i class="fas fa-server"></i> <span>Kubernetes</span></div>
+          <div class="skill"><i class="fab fa-aws"></i> <span>AWS</span></div>
         </div>
       </div>
     </section>
@@ -110,52 +96,29 @@
           <h3>JPMorgan Chase, Full Stack Developer</h3>
           <p>October 2023 - Present</p>
           <ul>
-            <li>Developed scalable web applications using Spring Boot and Angular</li>
-            <li>Implemented RESTful APIs and optimized database operations</li>
+            <li>Developed and maintained microservices using <strong>Spring Boot and Java</strong>.</li>
+            <li>Implemented and optimized <strong>RESTful APIs</strong> for seamless data integration.</li>
+            <li>Worked with <strong>Kubernetes</strong> to deploy scalable applications.</li>
+            <li>Enhanced security and authentication mechanisms for enterprise applications.</li>
           </ul>
         </div>
         <div class="experience-item">
           <h3>Virtusa Consulting, Associate Software Engineer</h3>
           <p>January 2022 - December 2022</p>
           <ul>
-            <li>Built dynamic user interfaces with React.js and back-end services</li>
-            <li>Enhanced architecture with microservices and security measures</li>
+            <li>Developed interactive front-end components using <strong>React.js and Angular</strong>.</li>
+            <li>Built backend services with <strong>Spring Boot and integrated SQL databases</strong>.</li>
+            <li>Contributed to CI/CD pipelines for automated testing and deployment.</li>
           </ul>
         </div>
         <div class="experience-item">
           <h3>Version 1, Software Engineer</h3>
           <p>March 2021 - December 2021</p>
           <ul>
-            <li>Developed backend services using Java and Spring Boot for enterprise applications</li>
-            <li>Collaborated with frontend teams to implement new features</li>
-            <li>Optimized database queries and ensured high availability of services</li>
+            <li>Designed and implemented database schemas for high-performance applications.</li>
+            <li>Developed and optimized backend logic using <strong>Java and SQL</strong>.</li>
+            <li>Worked with API integrations for seamless communication between services.</li>
           </ul>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects">
-      <div class="container">
-        <h2>Projects</h2>
-        <div class="project-item">
-          <h3>Cloud-Enabled File Sharing Tool</h3>
-          <p>
-            Developed a secure file-sharing solution using AWS S3 and Lambda.
-          </p>
-        </div>
-        <div class="project-item">
-          <h3>Performance Optimization for Felicity's Web Platform</h3>
-          <p>
-            Migrated codebase from AngularJS to Angular, boosting performance.
-          </p>
-        </div>
-        <div class="project-item">
-          <h3>Employee Management System</h3>
-          <p>
-            Streamlined HR processes with a robust application using Java Spring
-            and PostgreSQL.
-          </p>
         </div>
       </div>
     </section>
@@ -165,82 +128,22 @@
       <h2>Let's Connect and Collaborate</h2>
       <div class="contact-resume-wrapper">
         <div class="contact-icons">
-          <a href="mailto:saikrishna01@aogjob.com" target="_blank">
-            <i class="fas fa-envelope"></i>
-          </a>
-          <a href="tel:+13015692704" target="_blank">
-            <i class="fas fa-phone"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/sai-krishna-v-42aaa2227" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="https://github.com/yourusername" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
+          <a href="mailto:saikrishna01@aogjob.com" target="_blank"><i class="fas fa-envelope"></i></a>
+          <a href="tel:+13015692704" target="_blank"><i class="fas fa-phone"></i></a>
+          <a href="https://www.linkedin.com/in/sai-krishna-v-42aaa2227" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         <button id="view-resume-btn" class="btn">View Resume</button>
       </div>
-      </div>
     </section>
-    <!-- Footer -->
+
     <footer>
       <p>&copy; 2025 Sai Krishna. All rights reserved.</p>
     </footer>
 
-    <!-- Resume Modal -->
-    <div id="resume-modal" class="modal">
-      <div class="modal-content">
-        <span class="close-btn">&times;</span>
-        <iframe src="Resume.pdf" style="width:100%; height:80vh;" frameborder="0"></iframe>
-      </div>
-    </div>
-
     <script>
-      // Highlight active nav link on scroll
-      const sections = document.querySelectorAll('section');
-      const navLinks = document.querySelectorAll('.nav-link');
-
-      window.addEventListener('scroll', () => {
-        let current = '';
-        sections.forEach((section) => {
-          const sectionTop = section.offsetTop;
-          const sectionHeight = section.clientHeight;
-          if (pageYOffset >= sectionTop - sectionHeight / 3) {
-            current = section.getAttribute('id');
-          }
-        });
-
-        navLinks.forEach((link) => {
-          link.classList.remove('active');
-          if (link.getAttribute('href').includes(current)) {
-            link.classList.add('active');
-          }
-        });
-      });
-
-      // Resume Modal
-      const modal = document.getElementById('resume-modal');
-      const btn = document.getElementById('view-resume-btn');
-      const closeBtn = document.querySelector('.close-btn');
-
-      btn.onclick = () => {
-        modal.style.display = 'block';
-      };
-
-      closeBtn.onclick = () => {
-        modal.style.display = 'none';
-      };
-
-      window.onclick = (event) => {
-        if (event.target === modal) {
-          modal.style.display = 'none';
-        }
-      };
-
-      // Scroll animations
       document.addEventListener('DOMContentLoaded', () => {
         const sections = document.querySelectorAll('section');
-
         const observer = new IntersectionObserver(
           (entries) => {
             entries.forEach((entry) => {
@@ -249,11 +152,8 @@
               }
             });
           },
-          {
-            threshold: 0.3,
-          }
+          { threshold: 0.3 }
         );
-
         sections.forEach((section) => {
           observer.observe(section);
         });
