--- a/index.html
+++ b/index.html
@@ -122,6 +122,36 @@
         </div>
       </div>
     </section>
+    
+    <!-- Projects Section -->
+    <section id="projects">
+      <div class="container">
+        <h2>Projects</h2>
+        <div class="project-item">
+          <h3>Cloud-Enabled File Sharing Tool</h3>
+          <p>
+            Developed a secure file-sharing solution using AWS S3 and Lambda.
+          </p>
+        </div>
+        <div class="project-item">
+          <h3>Performance Optimization for Felicity's Web Platform</h3>
+          <p>
+            Migrated codebase from AngularJS to Angular, boosting performance.
+          </p>
+        </div>
+        <div class="project-item">
+          <h3>Employee Management System</h3>
+          <p>
+            Streamlined HR processes with a robust application using Java Spring
+            and PostgreSQL.
+          </p>
+        </div>
+            <div class="project-item">
+          <h3>Banking Application System </h3>
+          <p>Developed a web platform using Java EE, Spring MVC, Spring Boot, Hibernate, Oracle DB, JSP & DAO patterns.</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact">
