--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
           <div class="skill"><i class="fas fa-network-wired"></i> <span>RESTful APIs</span></div>
           <div class="skill"><i class="fas fa-server"></i> <span>Kubernetes</span></div>
           <div class="skill"><i class="fab fa-aws"></i> <span>AWS</span></div>
+         <div class="skill"><i class="fas fa-tools"></i><span>Jenkins</span></div>
+          <div class="skill"><i class="fas fa-stream"></i><span>Kafka</span></div>
+           <div class="skill"><i class="fas fa-leaf"></i><span>MongoDB</span></div>
+          
         </div>
       </div>
     </section>
