--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         <h2>About Me</h2>
         <div class="about-content">
           <p>
-            Hello! I'm Sai Krishna, a passionate Full Stack Developer with over 3 years of experience in
+            Hello! I'm Sai Krishna, a passionate Full Stack Developer with over 4.5 years of experience in
             developing scalable, high-performance web applications. I specialize in backend development with 
             <strong>Java, Spring Boot</strong> and have hands-on expertise in frontend frameworks like 
             <strong>React.js and Angular</strong>. 
           </p>
           <p>
-            My expertise extends to working with <strong>RESTful APIs, Microservices, SQL, NoSQL databases, and AWS</strong>. 
+            My expertise extends to working with <strong>React, RESTful APIs, Microservices, SQL, NoSQL databases, and AWS</strong>. 
             I'm also skilled in container orchestration using <strong>Kubernetes</strong> and have contributed to CI/CD pipelines 
             for automated deployment. With a strong foundation in software design patterns and best practices, 
             I love solving complex problems and optimizing performance for enterprise-grade applications.
@@ -98,7 +98,7 @@
         <h2>Experience</h2>
         <div class="experience-item">
           <h3>JPMorgan Chase, Full Stack Developer</h3>
-          <p>October 2023 - Present</p>
+          <p>October 2023 - March 2025</p>
           <ul>
             <li>Developed and maintained microservices using <strong>Spring Boot and Java</strong>.</li>
             <li>Implemented and optimized <strong>RESTful APIs</strong> for seamless data integration.</li>
@@ -107,20 +107,11 @@
           </ul>
         </div>
         <div class="experience-item">
-          <h3>Virtusa Consulting, Associate Software Engineer</h3>
-          <p>January 2022 - December 2022</p>
-          <ul>
-            <li>Developed interactive front-end components using <strong>React.js and Angular</strong>.</li>
-            <li>Built backend services with <strong>Spring Boot and integrated SQL databases</strong>.</li>
-            <li>Contributed to CI/CD pipelines for automated testing and deployment.</li>
-          </ul>
-        </div>
-        <div class="experience-item">
           <h3>Version 1, Software Engineer</h3>
-          <p>March 2021 - December 2021</p>
+          <p>Jan 2020 - December 2022</p>
           <ul>
             <li>Designed and implemented database schemas for high-performance applications.</li>
-            <li>Developed and optimized backend logic using <strong>Java and SQL</strong>.</li>
+            <li>Developed and optimized frontend and backend logic using <strong>Java, React and SQL</strong>.</li>
             <li>Worked with API integrations for seamless communication between services.</li>
           </ul>
         </div>
@@ -151,8 +142,8 @@
           </p>
         </div>
             <div class="project-item">
-          <h3>Banking Application System </h3>
-          <p>Developed a web platform using Java EE, Spring MVC, Spring Boot, Hibernate, Oracle DB, JSP & DAO patterns.</p>
+          <h3>Job Application Management System  </h3>
+          <p>Developed a full-stack job application management system using Java, Spring Boot, React, Html, CSS, Java script and Bootstrap. </p>
         </div>
       </div>
     </section>
@@ -164,7 +155,7 @@
         <div class="contact-icons">
           <a href="mailto:saikrishna01@aogjob.com" target="_blank"><i class="fas fa-envelope"></i></a>
           <a href="tel:+13015692704" target="_blank"><i class="fas fa-phone"></i></a>
-          <a href="https://www.linkedin.com/in/sai-krishna-v-42aaa2227" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/sai-krishna-v-developer" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
         </div>
         <button id="view-resume-btn" class="btn">View Resume</button>
