--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <strong>React.js and Angular</strong>. 
           </p>
           <p>
-            My expertise extends to working with <strong>React, RESTful APIs, Microservices, SQL, NoSQL databases, and AWS</strong>. 
+            My expertise extends to working with <strong>RESTful APIs, Microservices, SQL, NoSQL databases, and AWS</strong>. 
             I'm also skilled in container orchestration using <strong>Kubernetes</strong> and have contributed to CI/CD pipelines 
             for automated deployment. With a strong foundation in software design patterns and best practices, 
             I love solving complex problems and optimizing performance for enterprise-grade applications.
